Fix - Align do Sobre

--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -40,7 +40,8 @@
 
 .skill-container{
     display: flex;
-    margin: 50px 0;
+    margin: 50px auto;
+    justify-content: center;
 }
 
 .skill-container-l{
